# django_playground

./: .coveragerc  .gitignore  CHANGELOG.md  Procfile  README.md  create_user.bat  create_user.sh  docs.http  e_learning_dumpdata.json  fake_users.py  manage.py  migrate.bat  migrate.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  serve.bat  serve.sh  user_dumpdata.json
analytics/: admin.py  apps.py  models.py  serializers.py  services.py  signal.py  urls.py
analytics/api/: rest.py
analytics/migrations/: 0001_initial.py  0002_analytic_user.py
blog/: admin.py  apps.py  filter.py  interfaces.py  models.py  serializers.py  services.py  urls.py
blog/apis/: rest.py
blog/migrations/: 0001_initial.py
django_playground/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
e_learning/: admin.py  apps.py  interfaces.py  models.py  permissions.py  serializers.py  urls.py  utils.py
e_learning/apis/: rest.py
e_learning/migrations/: 0001_initial.py
templates/: security.txt
users/: admin.py  models.py  permissions.py  schema.py  serializers.py  services.py  types.py  urls.py
users/apis/: rest.py
users/migrations/: 0001_initial.py  0002_auto_20200325_1150.py
